# fastapiProject

./: .gitignore  README.md  main.py  pyproject.toml
FastAPI/: parametros.py  req.py  teste.py
